# gen-ai-practice

./: 1_askbuddy_chatbot.py  2_bot_with_groq.py  3_sql_agent.py  config.py  pyproject.toml
